src/app/views/home/home.component.scss
.main-container{
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 8px;
}

.card-container{
  width: 100%;
  max-width: 1200px;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: row;
  gap: 8px;
  padding: 0;
  @media only screen and (max-width: 1020px) {
    max-width: 900px;

    flex-direction: column;
    margin-left: 8px;
    margin-right: 8px;
  }
}

.card-container-tech{
  display: grid;
  align-items: end;
  justify-content: end;
  margin: 0 auto;
  gap: 12px;
  grid-template-columns: repeat(6,1fr);

  @media only screen and (max-width: 1020px) {
    grid-template-columns: repeat(4,1fr);
  }
  @media only screen and (max-width: 750px) {
    grid-template-columns: repeat(3,1fr);
  }
  @media only screen and (max-width: 560px) {
    grid-template-columns: repeat(2,1fr);
  }

}

  //Elementos
  .card-large-1{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    .avatar{
      padding: 0 0 0 24px;
      img{
        width: 130px;
        border-radius: 50%;
      }
    }
    .h1-heading{
      h1{
        text-align: start;
        font-family: 'Inter-Regular';
        padding: 0 0 0 24px;
        margin: 0;
        width: auto;
      }
    }
  }

  .card-large-2{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    p{
      padding: 20px;
    }
  }

  .card-large-3{
    display: flex;
    flex-direction: column;
    h2{
      padding: 30px;
    }
  }
  .card-medium-1{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    .card-medium-1--text{
      padding: 0;
      align-items: center;
      justify-content: space-evenly;
      display: flex;
      flex-direction: column;
      height: 100px;
      p{
        font-size: 1.8rem;
        padding: 0 20px 0 20px ;
        margin: 0;
      }
    }
    .card-medium--button{
      width: 400px;
      max-width: 400px;
      height: 80px;
      background-color: #fe5e19;
      border-radius: 50px;
      border-style: none;
      color: #ffffff;
      font-size: 20px;
    }
  }
  .card-medium-2{
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: space-around;
    img,p{
      padding-left: 40px;
    }
  }

  //Textos
  h1{
    width: 100%;
    align-items: center;
    text-align: center;
  }
  .title{
    width: 100%;
    justify-content: center;
    display: flex;
  }



@media only screen and (max-width: 767px) {}
@media only screen and (max-width: 480px) {}

